Move Coeff type to ragu_arithmetic crate.

--- a/crates/ragu_arithmetic/Cargo.toml
+++ b/crates/ragu_arithmetic/Cargo.toml
@@ -27,3 +27,6 @@ ff = { workspace = true }
 pasta_curves = { workspace = true }
 ragu_macros = { path = "../ragu_macros", version = "0.0.0" }
 rand = { workspace = true }
+
+[dev-dependencies]
+proptest = { workspace = true }
