docs: commit mermaid js assets

--- a/book/book.toml
+++ b/book/book.toml
@@ -11,6 +11,11 @@ after = ["links"]
 [preprocessor.mermaid]
 command = "mdbook-mermaid"
 
+[output]
+
+[output.html]
+additional-js = ["mermaid.min.js", "mermaid-init.js"]
+
 # Enable these to generate links with mdbook-rustdoc-link
 # Do not check in these uncommented.
 # [preprocessor.rustdoc-link]
